updating the sessions tokens and auth
